--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <title>React App</title>
+    <title>Hilary Lewis' Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
