--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hilary Lewis' Portfolio</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
